* Textfarbe dunkler angepasst

--- a/WE.Bauernhof.Design/Bauernhof.Design/style.css
+++ b/WE.Bauernhof.Design/Bauernhof.Design/style.css
@@ -108,7 +108,7 @@ body {
 
 .about-us h3,
 .our-products h3 {
-    color: #507c3a;
+    color: #2d5016;
     border-bottom: none;
     padding-bottom: 0;
     margin-bottom: 10px;
@@ -140,7 +140,7 @@ body {
 
 .product-item h4 {
     margin-top: 0;
-    color: #507c3a;
+    color: #2d5016;
     margin-bottom: 0;
 
 }
